v.0.3 release (z-index bugfix)

--- a/src/jquery.loadmask.css
+++ b/src/jquery.loadmask.css
@@ -35,3 +35,6 @@
 .masked-relative {
     position: relative !important;
 }
+.masked-hidden {
+    visibility: hidden !important;
+}
